Include npm role and install bower through this tool
close #2 #8

--- a/personal.yml
+++ b/personal.yml
@@ -5,3 +5,4 @@
     roles:
       - { role: ppa, env_tag: personal }
       - { role: pip, env_tag: personal }
+      - { role: npm, env_tag: personal }
