Install libffi-dev because of bug during cryptography pip installation

--- a/roles/ppa/vars/main.yml
+++ b/roles/ppa/vars/main.yml
@@ -111,6 +111,11 @@ packages:
       - personal
       - work
 
+  libffi-dev
+    when:
+      - personal
+      - work
+
       #instalar pg admin
       #instalar valentinadb
       #instalar dropbox
