--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: willy
 language: python
 python: "2.7"
 
@@ -7,7 +8,10 @@ before_install:
 
 install:
   # Install Ansible.
-  - pip install ansible
+  - pip install ansible==2.1.0
 
 script:
   - ansible-playbook work.yml --syntax-check
+  - ansible-playbook personal.yml --syntax-check
+  - ansible-playbook work.yml --sudo
+  - ansible-playbook personal.yml --sudo
