--- a/roles/ppa/vars/main.yml
+++ b/roles/ppa/vars/main.yml
@@ -95,11 +95,11 @@ packages:
       - work
       - personal
 
-  veracrypt:
-    repo_entry: "ppa:unit193/encryption"
-    key_url: http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x03647209B58A653A
-    when:
-      - personal
+  # veracrypt:
+  #   repo_entry: "ppa:unit193/encryption"
+  #   key_url: http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x03647209B58A653A
+  #   when:
+  #     - personal
 
   nodejs:
     when:
@@ -107,6 +107,12 @@ packages:
       - work
 
   npm:
+    when:
+      - personal
+      - work
+
+  fish:
+    repo_entry: "ppa:fish-shell/release-2"
     when:
       - personal
       - work
