--- a/roles/pip/tasks/main.yml
+++ b/roles/pip/tasks/main.yml
@@ -2,7 +2,7 @@
 
   - name: install pip packages
     pip:
-      name="{{ item.key }}"
-      state=latest
+      name: "{{ item.key }}"
+      state: latest
     when: env_tag in item.value.when
     with_dict: "{{packages}}"
