--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 language: python
 python: "2.7"
 
@@ -9,7 +9,7 @@ before_install:
 
 install:
   # Install Ansible.
-  - pip install ansible==2.1.0
+  - pip install ansible==2.7.2
   - printf '[defaults]\ninventory=hosts' > ansible.cfg
 
 script:
