Fix vscode key_url

--- a/roles/ppa/vars/main.yml
+++ b/roles/ppa/vars/main.yml
@@ -22,7 +22,7 @@ packages:
 
   code:
     filename: vscode
-    key_url: https://tagplus5.github.io/vscode-ppa/ubuntu/gpg.key
+    key_url: https://packages.microsoft.com/keys/microsoft.asc
     repo_entry: "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main"
     when:
       - work
